<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/diaEntryDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <!--ToDO: change text to string res-->

    <!--Toolbar-->
    <android.support.v7.widget.Toolbar
        android:id="@+id/detail_toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/detail_activity_title" />

    <!--Image / ToDO: Beschränkt auf 1 oder mehrere Bilder möglich?-->
    <ImageView
        android:id="@+id/imageView_entryImage"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:contentDescription="@string/detail_imageViewDesc_entryImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_toolbar"
        app:srcCompat="@drawable/stock_beach" />

    <!--Time-->
    <TextView
        android:id="@+id/textView_timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="5dp"
        android:text="@string/detail_textView_testTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_entryImage" />

    <!--Mood-->
    <ImageView
        android:id="@+id/imageView_mood"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/background_light"
        android:contentDescription="@string/detail_imageViewDesc_mood"
        app:layout_constraintEnd_toStartOf="@+id/textView_location"
        app:layout_constraintStart_toEndOf="@+id/textView_timestamp"
        app:layout_constraintTop_toBottomOf="@+id/imageView_entryImage"
        app:srcCompat="@drawable/ic_sentiment_5_very_satisfied_black_24dp" />

    <!--Location-->
    <TextView
        android:id="@+id/textView_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:padding="5dp"
        android:text="@string/detail_textView_testLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_entryImage" />

    <!--Entry-->
    <TextView
        android:id="@+id/textView_entryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:singleLine="false"
        android:text="@string/detail_textView_testText"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_timestamp" />




</android.support.constraint.ConstraintLayout>
