<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateActivity">


    <!--Toolbar-->
    <android.support.v7.widget.Toolbar
        android:id="@+id/create_toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/create_activity_title" />

    <!--Title-->
    <EditText
        android:id="@+id/create_editText_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/create_editTextHint_title"
        android:maxLength="20"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_toolbar" />

    <!--Entry-->
    <EditText
        android:id="@+id/create_editText_entryDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:gravity="top|left"
        android:hint="@string/create_editTextHint_entryDesc"
        android:inputType="textMultiLine"
        android:lines="10"
        android:minLines="6"
        app:layout_constraintTop_toBottomOf="@+id/location_find_btn" />


    <ImageView
        android:id="@+id/create_imageView_mainImage"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_editText_title" />


    <ImageButton
        android:id="@+id/create_imageButton_selectImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape_buttons_drawable"
        app:srcCompat="@drawable/ic_add_a_photo_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/create_imageView_mainImage"
        app:layout_constraintEnd_toEndOf="@+id/create_imageView_mainImage"
        app:layout_constraintStart_toStartOf="@+id/create_imageView_mainImage"
        app:layout_constraintTop_toTopOf="@+id/create_imageView_mainImage" />

    <!--Mood select Text-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/create_textView_moodSelect"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/location_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_imageView_mainImage" />

    <!--Mood select-->
    <ImageButton
        android:id="@+id/imageButton_moodSelect"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/shape_buttons_drawable"
        app:layout_constraintTop_toBottomOf="@+id/create_imageView_mainImage"
        app:srcCompat="@drawable/ic_sentiment_5_very_satisfied_black_24dp" />

    <ImageButton
        android:id="@+id/location_find_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape_buttons_drawable"
        android:src="@drawable/baseline_location_on_black_18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton_moodSelect" />

    <EditText
        android:id="@+id/location_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/create_editText_location"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton_moodSelect" />

</android.support.constraint.ConstraintLayout>